[package]
name = "tet-ris"
version = "0.3.0"
edition = "2021"
description = "A play a quick game of 1984-ish Tetris right in the terminal!"
readme = "README.md"
repository = "https://github.com/manorajesh/tet-ris"
license = "MIT"
keywords = ["tetris", "game", "terminal"]
categories = ["games"]
exclude = [".vscode", "images", ".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.2.4", features = ["derive"] }
crossterm = { version = "^0.26.1", default-features = false }
bendy = "^0.3"
rand = "^0.8.5"
serde = { version = "^1.0.160", features = ["derive"] }
bincode = "^1.3.3"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
debug = 1
